# MeetFlowAI

./: .env.example  AUTHENTICATION.md  Dockerfile  ERROR_RECOVERY.md  PERFORMANCE_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  alembic.ini  demo.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  classifier_agent.py  extraction_agent.py  ingestion_agent.py  verification_agent.py
agents/workflow/: README.md  __init__.py  jira_agent.py
alembic/: env.py
alembic/versions/: 987b8fee1898_initial_schema.py
api/: __init__.py  audit.py  auth.py  health.py  meetings.py  rate_limiter.py  slack.py
db/: database.py  models.py
examples/: run_pipeline.py
integrations/: __init__.py  approval_reminders.py  cache.py  circuit_breaker.py  gemini.py  http_client.py  llm_factory.py  ollama.py  request_queue.py  slack.py
orchestrator/: README.md  __init__.py  graph.py  nodes.py
prompts/: __init__.py  classification.py  extraction.py
schemas/: base.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_authentication.py  test_circuit_breaker.py  test_classifier_agent.py  test_classifier_integration.py  test_gemini_client.py  test_health_endpoints.py  test_ingestion_agent.py  test_jira_agent.py  test_jira_agent_unit.py  test_jira_integration.py  test_ollama_client.py  test_orchestrator.py  test_orchestrator_full_flow.py  test_orchestrator_integration.py  test_performance_optimizations.py  test_slack_integration.py  test_summary_audit.py  test_verification_agent.py
tests/fixtures/: q2_planning_sync.vtt
(+2 files in other folders)
